nullaway_error_B5B7824D-9078-4710-9C6F-A21660D46A16.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/result/method/annotation/ModelInitializer.java:128: error: [NullAway] dereferenced expression adapter is @Nullable
				return Mono.from(adapter.toPublisher(value));
				                        ^
    (see http://t.uber.com/nullaway )
